# devops_sports

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: Dockerfile  nginx.conf
frontend/public/: app.js  index.html  style.css
k8s/: deployment.yaml  service.yaml
src/: main.rs
